# TELL

./: .env.example  .gitignore  .gitmodules  README.md  generate_replay_bundles.py  index.html  main.py  pyproject.toml  report_content.md  run_all_tasks.sh
ARC-AGI/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  quickstart.py
ARC-AGI/test_environment_files/game1/: bt11.py  metadata.json
ARC-AGI/test_environment_files/game2/subdir/: bt33.py  metadata.json
ARC-AGI/tests/: __init__.py
ARCEngine/: .gitignore  LICENSE  README.md  pyproject.toml
ARCEngine/examples/: complex_maze.py  main.py  merge.py  merge_detach.py  simple_maze.py
ARCEngine/tests/: __init__.py  test_base_game.py  test_benchmarking.py  test_camera.py  test_enums.py  test_interfaces.py  test_level.py  test_sprites.py
agents/: __init__.py  agent.py  game_bridge.py  swarm.py
agents/tell_agent/: __init__.py  agent.py  claude_client.py  compaction.py  config.py  llm_client.py  llm_response.py  logging_v3.py  permissions.py  prompt_renderer.py  prompts.py  request_formatter.py  runtime_log_context.py  runtime_service.py  session_resume.py  stage_prompts.py  stage_workflow.py  state_machine.py  tell_agent.yaml  tool_handlers.py  tools.json  tools.py  workspace_volume.py
agents/tell_agent/configs/: offline.yaml  prior_memory.yaml
agents/tell_agent/prior_memory/: CLEANING_PROMPT.md  ar25_MEMORY.md  bp35_MEMORY.md  cd82_MEMORY.md  cn04_MEMORY.md  dc22_MEMORY.md  ft09_MEMORY.md  g50t_MEMORY.md  ka59_MEMORY.md  lf52_MEMORY.md  lp85_MEMORY.md  ls20_MEMORY.md  m0r0_MEMORY.md  r11l_MEMORY.md  re86_MEMORY.md  s5i5_MEMORY.md  sb26_MEMORY.md  sc25_MEMORY.md  sk48_MEMORY.md  sp80_MEMORY.md  su15_MEMORY.md  tn36_MEMORY.md  tr87_MEMORY.md  tu93_MEMORY.md  vc33_MEMORY.md  wa30_MEMORY.md
agents/tell_agent/template_workspace/memory/hypotheses/: MEMORY.md
agents/tell_agent/template_workspace/memory/knowledge/: MEMORY.md
agents/tell_agent/template_workspace/memory/policy/: MEMORY.md  runner.py
agents/tell_agent/template_workspace/memory/skills/: MEMORY.md
agents/tell_agent/template_workspace_empty/: MEMORY.md  arc_utils.py
replay_data/: thumbnails.json
tests/: conftest.py
tests/unit/: test_tell_agent_deep_analysis.py  test_tell_agent_resume_tools.py  test_tell_agent_win_epilogue.py
