[build-system]
requires = ["uv_build >= 0.9.18, <0.10.0"]
build-backend = "uv_build"

[project]
name = "arc-agi"
version = "0.9.6"
description = "ARC-AGI Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "arcprizefoundation", email = ""},
]
dependencies = [
    "arcengine>=0.9.3",
    "flask>=3.1.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.1.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [
    "tests",
]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools]
packages = ["arc-agi"]

[tool.setuptools.package-data]
"arc-agi" = ["py.typed"]

[tool.uv.build-backend]
module-name = "arc_agi"
module-root = ""
